// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withData HOC with missing articleData should return the errorMain component 1`] = `
<ErrorMain
  status={200}
/>
`;

exports[`withData HOC with no data should return the errorMain component and 500 status 1`] = `
<ErrorMain
  status={500}
/>
`;

exports[`withData HOC with non 200 status should return the errorMain component 1`] = `
<ErrorMain
  status={157}
/>
`;

exports[`withData HOC with valid articles data but different home service other than locale service should return the errorMain component 1`] = `
<ErrorMain
  status={404}
/>
`;

exports[`withData HOC with valid articles data should return the passed in component 1`] = `
<Component
  pageData={
    Object {
      "content": Object {
        "model": Object {
          "blocks": Array [
            Object {
              "model": Object {
                "blocks": Array [
                  Object {
                    "model": Object {
                      "blocks": Array [
                        Object {
                          "model": Object {
                            "blocks": Array [
                              Object {
                                "model": Object {
                                  "attributes": Array [],
                                  "text": "Article Headline",
                                },
                                "type": "fragment",
                              },
                            ],
                            "text": "Article Headline",
                          },
                          "type": "paragraph",
                        },
                      ],
                    },
                    "type": "text",
                  },
                ],
              },
              "type": "headline",
            },
            Object {
              "model": Object {
                "blocks": Array [
                  Object {
                    "model": Object {
                      "blocks": Array [
                        Object {
                          "model": Object {
                            "attributes": Array [],
                            "text": "A paragraph.",
                          },
                          "type": "fragment",
                        },
                      ],
                      "text": "A paragraph.",
                    },
                    "type": "paragraph",
                  },
                ],
              },
              "type": "text",
            },
          ],
        },
      },
      "metadata": Object {
        "created": 1514808060000,
        "createdBy": "News",
        "firstPublished": 1514808060000,
        "id": "urn:bbc:ares::article:c0000000001o",
        "lastPublished": 1514811600000,
        "lastUpdated": 1514815200000,
        "locators": Object {
          "optimoUrn": "urn:bbc:optimo:asset:c0000000001o",
        },
        "passport": Object {
          "category": "news",
          "genre": null,
          "home": "http://www.bbc.co.uk/ontologies/passport/home/News",
          "language": "en-gb",
        },
        "tags": Object {
          "about": Array [
            Object {
              "curationType": Array [
                "vivo-stream",
              ],
              "thingId": "2351f2b2-ce36-4f44-996d-c3c4f7f90eaa",
              "thingLabel": "Royal Wedding 2018",
              "thingSameAs": Array [
                "http://dbpedia.org/resource/Queen_Victoria",
                "http://rdf.freebase.com/ns/m.0cw10",
              ],
              "thingType": Array [
                "Thing",
                "Event",
              ],
              "thingUri": "http://www.bbc.co.uk/things/2351f2b2-ce36-4f44-996d-c3c4f7f90eaa#id",
              "topicId": "cpwpy79d6dxt",
              "topicName": "Royal Wedding 2018",
            },
            Object {
              "curationType": Array [
                "vivo-stream",
              ],
              "thingId": "803eaeb9-c0c3-4f1b-9a66-90efac3df2dc",
              "thingLabel": "Duchess of Sussex",
              "thingSameAs": Array [],
              "thingType": Array [
                "Person",
              ],
              "thingUri": "http://www.bbc.co.uk/things/803eaeb9-c0c3-4f1b-9a66-90efac3df2dc#id",
              "topicId": "cg3mq45zq4xt",
              "topicName": "Duchess of Sussex",
            },
          ],
          "mentions": Array [
            Object {
              "thingId": "1efbf3e5-b330-49a1-b531-b507ab027c96",
              "thingLabel": "Queen Victoria",
              "thingType": Array [
                "Person",
                "Thing",
              ],
              "thingUri": "http://www.bbc.co.uk/things/1efbf3e5-b330-49a1-b531-b507ab027c96#id",
            },
          ],
        },
        "type": "article",
      },
      "promo": Object {
        "headlines": Object {
          "promoHeadline": "Article Headline for Promo",
          "seoHeadline": "Article Headline for SEO",
        },
        "id": "urn:bbc:ares::article:c0000000001o",
        "locators": Object {
          "optimoUrn": "urn:bbc:optimo:asset:c0000000001o",
        },
        "summary": "Article summary.",
        "timestamp": 1514811600000,
      },
    }
  }
  service="news"
/>
`;

exports[`withData HOC with valid front-pages data should return the passed in component 1`] = `
<Component
  pageData={
    Object {
      "content": Object {
        "groups": Array [
          Object {
            "items": Array [
              Object {
                "commentary": Object {
                  "assetUUID": "A8F17B8D05CD9549B2905B8C4E2C5019",
                  "channels": Object {
                    "desktop": "bbc.cps.asset.48591365_HighWeb",
                    "enhancedmobile": "bbc.cps.asset.48591365_EnhancedMobile",
                    "highweb": "bbc.cps.asset.48591365_HighWeb",
                    "mobile": "bbc.cps.asset.48591365_EnhancedMobile",
                  },
                  "order": "descending",
                },
                "cpsType": "LIV",
                "headlines": Object {
                  "headline": "Senators don begin vote for Senate President",
                },
                "id": "urn:bbc:ares::asset:pidgin/live/tori-48591362",
                "imageThumbnail": Object {
                  "altText": "Senator Ahmad Lawan and Ali Ndume",
                  "caption": "Senator Ahmad Lawan and Senator Ali Ndume dey contest to become di senate president",
                  "copyrightHolder": "Other",
                  "height": 180,
                  "href": "http://c.files.bbci.co.uk/9D00/production/_107329104_ninthnationalassemblypidgin_senate_reps_1080.jpg",
                  "id": "107329104",
                  "path": "/cpsprodpb/9D00/production/_107329104_ninthnationalassemblypidgin_senate_reps_1080.jpg",
                  "subType": "index-thumbnail",
                  "width": 320,
                },
                "indexImage": Object {
                  "altText": "Senator Ahmad Lawan and Ali Ndume",
                  "caption": "Senator Ahmad Lawan and Senator Ali Ndume dey contest to become di senate president",
                  "copyrightHolder": "Other",
                  "height": 549,
                  "href": "http://c.files.bbci.co.uk/16D8E/production/_107328539_ninthnationalassemblypidgin_senate_reps_1080.jpg",
                  "id": "107328539",
                  "path": "/cpsprodpb/16D8E/production/_107328539_ninthnationalassemblypidgin_senate_reps_1080.jpg",
                  "subType": "index",
                  "width": 976,
                },
                "isLive": true,
                "locators": Object {
                  "assetUri": "/pidgin/live/tori-48591362",
                  "cpsUrn": "urn:bbc:content:assetUri:pidgin/live/tori-48591362",
                },
                "options": Object {
                  "isBreakingNews": false,
                  "isFactCheck": false,
                },
                "passport": Object {
                  "campaigns": Array [
                    Object {
                      "campaignId": "5a988e3e39461b000e9dabfb",
                      "campaignName": "WS - Keep me on trend",
                    },
                    Object {
                      "campaignId": "5a988e4739461b000e9dabfc",
                      "campaignName": "WS - Update me",
                    },
                  ],
                  "category": Object {
                    "categoryId": "http://www.bbc.co.uk/ontologies/applicationlogic-news/News",
                    "categoryName": "News",
                  },
                },
                "prominence": "standard",
                "relatedItems": Array [
                  Object {
                    "cpsType": "STY",
                    "headlines": Object {
                      "headline": "Who go lead di Ninth National Assembly?",
                    },
                    "id": "urn:bbc:ares::asset:pidgin/tori-48591361",
                    "locators": Object {
                      "assetUri": "/pidgin/tori-48591361",
                      "cpsUrn": "urn:bbc:content:assetUri:/pidgin/tori-48591361",
                    },
                    "summary": "Nigeria go do inauguration to welcome im tear rubber lawmakers into di Ninth Assembly.",
                    "timestamp": 1560229040,
                    "type": "cps",
                  },
                  Object {
                    "cpsType": "STY",
                    "headlines": Object {
                      "headline": "4 tins wey go determine who become di next Senate President, Speaker",
                    },
                    "id": "urn:bbc:ares::asset:pidgin/tori-47603701",
                    "locators": Object {
                      "assetUri": "/pidgin/tori-47603701",
                      "cpsUrn": "urn:bbc:content:assetUri:/pidgin/tori-47603701",
                    },
                    "summary": "Efritin don set for di battle for di leadership battle of di kontri National Assembly during dia 9th assembly.",
                    "timestamp": 1552922729,
                    "type": "cps",
                  },
                ],
                "summary": "Nigeria dey do inauguration to welcome im tear rubber lawmakers into di Ninth National Assembly.",
                "timestamp": 1560234413,
                "type": "cps",
              },
              Object {
                "cpsType": "MAP",
                "headlines": Object {
                  "headline": "BBC Pidgin Minute",
                },
                "id": "urn:bbc:ares::asset:pidgin/media-44221514",
                "indexImage": Object {
                  "altText": "BBC Pidgin Minute",
                  "copyrightHolder": "BBC",
                  "height": 576,
                  "href": "http://c.files.bbci.co.uk/4F7F/production/_107315302_p07cr6sy.jpg",
                  "id": "107315302",
                  "path": "/cpsprodpb/4F7F/production/_107315302_p07cr6sy.jpg",
                  "subType": "index",
                  "width": 1024,
                },
                "locators": Object {
                  "assetUri": "/pidgin/media-44221514",
                  "cpsUrn": "urn:bbc:content:assetUri:pidgin/media-44221514",
                },
                "media": Object {
                  "advertising": false,
                  "caption": "BBC Pidgin Minute",
                  "embedding": false,
                  "format": "audio",
                  "id": "p07ct6cd",
                  "imageCopyright": "BBC",
                  "imageUrl": "ichef.bbci.co.uk/images/ic/$recipe/p07ct6pt.jpg",
                  "subType": "clip",
                  "synopses": Object {
                    "medium": "All di local and world tori wey you suppose know in 60 seconds!",
                    "short": "BBC Pidgin Minute",
                  },
                  "title": "BBC Pidgin Minute",
                  "versions": Array [
                    Object {
                      "availableFrom": 1560243610,
                      "availableTerritories": Object {
                        "nonUk": true,
                        "uk": true,
                      },
                      "availableUntil": 1560330010,
                      "duration": 59,
                      "durationISO8601": "PT59S",
                      "types": Array [
                        "Original",
                      ],
                      "versionId": "p07ct6cg",
                      "warnings": Object {},
                    },
                  ],
                },
                "options": Object {
                  "isBreakingNews": false,
                  "isFactCheck": false,
                },
                "passport": Object {
                  "campaigns": Array [
                    Object {
                      "campaignId": "5a988e2939461b000e9dabf8",
                      "campaignName": "WS - Educate me",
                    },
                    Object {
                      "campaignId": "5a988e3739461b000e9dabfa",
                      "campaignName": "WS - Give me perspective",
                    },
                    Object {
                      "campaignId": "5a988e3e39461b000e9dabfb",
                      "campaignName": "WS - Keep me on trend",
                    },
                    Object {
                      "campaignId": "5a988e4739461b000e9dabfc",
                      "campaignName": "WS - Update me",
                    },
                  ],
                  "category": Object {
                    "categoryId": "http://www.bbc.co.uk/ontologies/applicationlogic-news/News",
                    "categoryName": "News",
                  },
                },
                "prominence": "standard",
                "summary": "All di local and world tori wey you suppose know in 60 seconds!",
                "timestamp": 1560244489,
                "type": "cps",
              },
              Object {
                "cpsType": "STY",
                "headlines": Object {
                  "headline": "Majid Waris no get ‘sɛlɛ’ for Coach Kwesi Appiah en Black Stars Afcon squad",
                },
                "id": "urn:bbc:ares::asset:pidgin/tori-48591366",
                "indexImage": Object {
                  "altText": "Di Black Stars",
                  "copyrightHolder": "Facebook/Ghana Football Association",
                  "height": 549,
                  "href": "http://c.files.bbci.co.uk/0585/production/_107331410_ghana2019afconsquad.jpg",
                  "id": "107331410",
                  "path": "/cpsprodpb/0585/production/_107331410_ghana2019afconsquad.jpg",
                  "subType": "index",
                  "width": 976,
                },
                "locators": Object {
                  "assetUri": "/pidgin/tori-48591366",
                  "cpsUrn": "urn:bbc:content:assetUri:pidgin/tori-48591366",
                },
                "options": Object {
                  "isBreakingNews": false,
                  "isFactCheck": false,
                },
                "passport": Object {
                  "campaigns": Array [
                    Object {
                      "campaignId": "5a988e4739461b000e9dabfc",
                      "campaignName": "WS - Update me",
                    },
                  ],
                  "category": Object {
                    "categoryId": "http://www.bbc.co.uk/ontologies/applicationlogic-news/News",
                    "categoryName": "News",
                  },
                },
                "prominence": "standard",
                "summary": "Major shocker wey come out be sey dem drop striker, Majeed Waris who dem replace plus U-23 striker, Kwabena Owusu.",
                "timestamp": 1560248901,
                "type": "cps",
              },
              Object {
                "cpsType": "STY",
                "headlines": Object {
                  "headline": "Woman write exam 30 minutes afta she born",
                },
                "id": "urn:bbc:ares::asset:pidgin/tori-48579283",
                "indexImage": Object {
                  "altText": "New mama dey write exam",
                  "caption": "Di 21 year old mama get plan to go university",
                  "copyrightHolder": "Ilu Abba Bor Zone communication office",
                  "height": 549,
                  "href": "http://c.files.bbci.co.uk/2FA0/production/_107329121_34ba0903-191f-4410-a575-16ca72c6ce2c.jpg",
                  "id": "107329121",
                  "path": "/cpsprodpb/2FA0/production/_107329121_34ba0903-191f-4410-a575-16ca72c6ce2c.jpg",
                  "subType": "index",
                  "width": 976,
                },
                "locators": Object {
                  "assetUri": "/pidgin/tori-48579283",
                  "cpsUrn": "urn:bbc:content:assetUri:pidgin/tori-48579283",
                },
                "options": Object {
                  "isBreakingNews": false,
                  "isFactCheck": false,
                },
                "passport": Object {
                  "campaigns": Array [
                    Object {
                      "campaignId": "5a988e3e39461b000e9dabfb",
                      "campaignName": "WS - Keep me on trend",
                    },
                  ],
                  "category": Object {
                    "categoryId": "http://www.bbc.co.uk/ontologies/applicationlogic-news/News",
                    "categoryName": "News",
                  },
                },
                "prominence": "standard",
                "summary": "Di 21-year-old Ethiopian woman don take one of her secondary school leaving exams 30 minutes afta she born.",
                "timestamp": 1560247905,
                "type": "cps",
              },
            ],
            "maxRelatedLinks": 3,
            "semanticGroupName": "Top Stories",
            "strapline": Object {
              "name": "Top tori",
            },
            "title": "Top Stories",
            "type": "responsive-top-stories",
          },
          Object {
            "items": Array [
              Object {
                "byline": Object {
                  "name": "Karina Igonikon",
                  "persons": Array [
                    Object {
                      "function": "BBC News Pidgin, Port Harcourt",
                      "name": "Karina Igonikon",
                      "thumbnail": "http://c.files.bbci.co.uk/172D8/production/_99963949_karina.jpg",
                    },
                  ],
                  "title": "BBC News Pidgin, Port Harcourt",
                },
                "cpsType": "STY",
                "headlines": Object {
                  "headline": "'Police need to use technology fight crime for Rivers'",
                },
                "id": "urn:bbc:ares::asset:pidgin/tori-48578550",
                "indexImage": Object {
                  "altText": "Nigeria Police",
                  "copyrightHolder": "YASUYOSHI CHIBA",
                  "height": 549,
                  "href": "http://c.files.bbci.co.uk/4660/production/_106261081_gettyimages-1125065202.jpg",
                  "id": "106261081",
                  "path": "/cpsprodpb/4660/production/_106261081_gettyimages-1125065202.jpg",
                  "subType": "index",
                  "width": 976,
                },
                "locators": Object {
                  "assetUri": "/pidgin/tori-48578550",
                  "cpsUrn": "urn:bbc:content:assetUri:pidgin/tori-48578550",
                },
                "options": Object {
                  "isBreakingNews": false,
                  "isFactCheck": false,
                },
                "passport": Object {
                  "campaigns": Array [
                    Object {
                      "campaignId": "5a988e4739461b000e9dabfc",
                      "campaignName": "WS - Update me",
                    },
                  ],
                  "category": Object {
                    "categoryId": "http://www.bbc.co.uk/ontologies/applicationlogic-news/News",
                    "categoryName": "News",
                  },
                },
                "summary": "Di oil rich Rivers state for south south Nigeria dey battle insecurity including kidnappings, armed robbery and cultism.",
                "timestamp": 1560169439,
                "type": "cps",
              },
              Object {
                "cpsType": "STY",
                "headlines": Object {
                  "headline": "\\"I laik wen deh treat me as journalist and not blind man\\" - Somb Lingom",
                },
                "id": "urn:bbc:ares::asset:pidgin/tori-48560300",
                "indexImage": Object {
                  "altText": "Jean Pascal Somb Lingom",
                  "caption": "Jean Pascal Somb Lingom blind wen e be eight years old",
                  "copyrightHolder": "BBC",
                  "height": 549,
                  "href": "http://c.files.bbci.co.uk/E91F/production/_107297695_jeanpascalsomblingom.jpg",
                  "id": "107297695",
                  "path": "/cpsprodpb/E91F/production/_107297695_jeanpascalsomblingom.jpg",
                  "subType": "index",
                  "width": 976,
                },
                "locators": Object {
                  "assetUri": "/pidgin/tori-48560300",
                  "cpsUrn": "urn:bbc:content:assetUri:pidgin/tori-48560300",
                },
                "options": Object {
                  "isBreakingNews": false,
                  "isFactCheck": false,
                },
                "passport": Object {
                  "campaigns": Array [
                    Object {
                      "campaignId": "5a988e2139461b000e9dabf7",
                      "campaignName": "WS - Inspire me",
                    },
                  ],
                  "category": Object {
                    "categoryId": "http://www.bbc.co.uk/ontologies/applicationlogic-news/News",
                    "categoryName": "News",
                  },
                },
                "summary": "Somb Lingom na tori pesin wey dey visually impaired for Cameroon wey dey helep oda pipo laik e for go school.",
                "timestamp": 1559972056,
                "type": "cps",
              },
              Object {
                "cpsType": "STY",
                "headlines": Object {
                  "headline": "One million new sex infections dey appear evri day - WHO",
                },
                "id": "urn:bbc:ares::asset:pidgin/world-48553140",
                "indexImage": Object {
                  "altText": "gonorrhoea alert",
                  "copyrightHolder": "BBC",
                  "height": 549,
                  "href": "http://c.files.bbci.co.uk/CB82/production/_107289025_gono2.jpg",
                  "id": "107289025",
                  "path": "/cpsprodpb/CB82/production/_107289025_gono2.jpg",
                  "subType": "index",
                  "width": 976,
                },
                "locators": Object {
                  "assetUri": "/pidgin/world-48553140",
                  "cpsUrn": "urn:bbc:content:assetUri:pidgin/world-48553140",
                },
                "options": Object {
                  "isBreakingNews": false,
                  "isFactCheck": false,
                },
                "passport": Object {
                  "campaigns": Array [
                    Object {
                      "campaignId": "5a988e4739461b000e9dabfc",
                      "campaignName": "WS - Update me",
                    },
                  ],
                  "category": Object {
                    "categoryId": "http://www.bbc.co.uk/ontologies/applicationlogic-news/News",
                    "categoryName": "News",
                  },
                },
                "summary": "WHO say safe sex especially through condom and correct testing dey important to reduce di spread.",
                "timestamp": 1559903541,
                "type": "cps",
              },
              Object {
                "cpsType": "STY",
                "headlines": Object {
                  "headline": "Why Kano State goment cancel popular traditional event",
                },
                "id": "urn:bbc:ares::asset:pidgin/tori-48538424",
                "indexImage": Object {
                  "altText": "Sarki Sanusi",
                  "copyrightHolder": "Getty Images",
                  "height": 334,
                  "href": "http://c.files.bbci.co.uk/12011/production/_107254737_gettyimages-869453732-594x594.jpg",
                  "id": "107254737",
                  "path": "/cpsprodpb/12011/production/_107254737_gettyimages-869453732-594x594.jpg",
                  "subType": "index",
                  "width": 594,
                },
                "locators": Object {
                  "assetUri": "/pidgin/tori-48538424",
                  "cpsUrn": "urn:bbc:content:assetUri:pidgin/tori-48538424",
                },
                "options": Object {
                  "isBreakingNews": false,
                  "isFactCheck": false,
                },
                "passport": Object {
                  "campaigns": Array [
                    Object {
                      "campaignId": "5a988e4739461b000e9dabfc",
                      "campaignName": "WS - Update me",
                    },
                  ],
                  "category": Object {
                    "categoryId": "http://www.bbc.co.uk/ontologies/applicationlogic-news/News",
                    "categoryName": "News",
                  },
                },
                "summary": "Di 'Hawan Nassarawa' na popular annual event wey dem dey do for four days during di Salah, but dis year own don get k-leg.",
                "timestamp": 1559810011,
                "type": "cps",
              },
            ],
            "semanticGroupName": "Cluster 1",
            "strapline": Object {
              "name": "Yarn Me Tori",
            },
            "title": "Cluster 1",
            "type": "responsive-cluster",
          },
          Object {
            "items": Array [
              Object {
                "cpsType": "STY",
                "headlines": Object {
                  "headline": "Cameroon di lock horn wit Canada for first ever game",
                },
                "id": "urn:bbc:ares::asset:pidgin/sport-48578548",
                "indexImage": Object {
                  "altText": "Di Indomitable Lionesses",
                  "copyrightHolder": "Fecafoot",
                  "height": 549,
                  "href": "http://c.files.bbci.co.uk/0AB5/production/_107314720_22358df2-692e-4640-9c19-04f8242cef56.jpg",
                  "id": "107314720",
                  "path": "/cpsprodpb/0AB5/production/_107314720_22358df2-692e-4640-9c19-04f8242cef56.jpg",
                  "subType": "index",
                  "width": 976,
                },
                "locators": Object {
                  "assetUri": "/pidgin/sport-48578548",
                  "cpsUrn": "urn:bbc:content:assetUri:pidgin/sport-48578548",
                },
                "options": Object {
                  "isBreakingNews": false,
                  "isFactCheck": false,
                },
                "passport": Object {
                  "campaigns": Array [
                    Object {
                      "campaignId": "5a988e4739461b000e9dabfc",
                      "campaignName": "WS - Update me",
                    },
                  ],
                  "category": Object {
                    "categoryId": "http://www.bbc.co.uk/ontologies/applicationlogic-news/News",
                    "categoryName": "News",
                  },
                },
                "summary": "Na de first taim weh Canada and Cameroon go jam for top international game for 2019 Fifa Women’s World Cup.",
                "timestamp": 1560161643,
                "type": "cps",
              },
              Object {
                "cpsType": "STY",
                "headlines": Object {
                  "headline": "Nadal don win number 12 French Open title",
                },
                "id": "urn:bbc:ares::asset:pidgin/sport-48574594",
                "indexImage": Object {
                  "altText": "Nadal brings the trophy to his forehead",
                  "copyrightHolder": "Clive Brunskill",
                  "height": 1152,
                  "href": "http://c.files.bbci.co.uk/18453/production/_107311499_gettyimages-1154811588.jpg",
                  "id": "107311499",
                  "path": "/cpsprodpb/18453/production/_107311499_gettyimages-1154811588.jpg",
                  "subType": "index",
                  "width": 2048,
                },
                "locators": Object {
                  "assetUri": "/pidgin/sport-48574594",
                  "cpsUrn": "urn:bbc:content:assetUri:pidgin/sport-48574594",
                },
                "options": Object {
                  "isBreakingNews": false,
                  "isFactCheck": false,
                },
                "passport": Object {
                  "campaigns": Array [
                    Object {
                      "campaignId": "5a988e4739461b000e9dabfc",
                      "campaignName": "WS - Update me",
                    },
                  ],
                  "category": Object {
                    "categoryId": "http://www.bbc.co.uk/ontologies/applicationlogic-news/News",
                    "categoryName": "News",
                  },
                },
                "summary": "Nadal win for di third straight year for Roland Garros wit 6-3 5-7 6-1 6-1 victory for di final.",
                "timestamp": 1560101483,
                "type": "cps",
              },
              Object {
                "cpsType": "STY",
                "headlines": Object {
                  "headline": "Kelechi Iheanacho no follow as Nigeria release Afcon list",
                },
                "id": "urn:bbc:ares::asset:pidgin/sport-48574590",
                "indexImage": Object {
                  "altText": "Super Eagles",
                  "copyrightHolder": "NFF",
                  "height": 549,
                  "href": "http://c.files.bbci.co.uk/15A0E/production/_107309588_d8nrcmjxkaeekro.jpg",
                  "id": "107309588",
                  "path": "/cpsprodpb/15A0E/production/_107309588_d8nrcmjxkaeekro.jpg",
                  "subType": "index",
                  "width": 976,
                },
                "locators": Object {
                  "assetUri": "/pidgin/sport-48574590",
                  "cpsUrn": "urn:bbc:content:assetUri:pidgin/sport-48574590",
                },
                "options": Object {
                  "isBreakingNews": false,
                  "isFactCheck": false,
                },
                "passport": Object {
                  "campaigns": Array [
                    Object {
                      "campaignId": "5a988e4739461b000e9dabfc",
                      "campaignName": "WS - Update me",
                    },
                  ],
                  "category": Object {
                    "categoryId": "http://www.bbc.co.uk/ontologies/applicationlogic-news/News",
                    "categoryName": "News",
                  },
                },
                "summary": "Leicester City forward Kelechi Iheanacho and Semi Ajayi na di two players wey dem drop from di team.",
                "timestamp": 1560085285,
                "type": "cps",
              },
            ],
            "semanticGroupName": "Section 1",
            "strapline": Object {
              "links": Object {
                "desktop": "https://www.bbc.com/pidgin/sport",
                "enhancedmobile": "https://www.bbc.com/pidgin/sport",
                "highweb": "https://www.bbc.com/pidgin/sport",
                "mobile": "https://www.bbc.com/pidgin/sport",
              },
              "name": "Sport (click for more tori) ",
              "type": "LINK",
            },
            "title": "Section 1",
            "type": "responsive-must-see",
          },
          Object {
            "items": Array [
              Object {
                "cpsType": "MAP",
                "headlines": Object {
                  "headline": "“If di spoon attract me, most times na to carry am enta studio” – Collins",
                },
                "id": "urn:bbc:ares::asset:pidgin/tori-48591363",
                "indexImage": Object {
                  "altText": "Abiniro Collins na spoon artist",
                  "copyrightHolder": "BBC",
                  "height": 549,
                  "href": "http://c.files.bbci.co.uk/10DE4/production/_107329096_p07csxwm.jpg",
                  "id": "107329096",
                  "path": "/cpsprodpb/10DE4/production/_107329096_p07csxwm.jpg",
                  "subType": "index",
                  "width": 976,
                },
                "locators": Object {
                  "assetUri": "/pidgin/tori-48591363",
                  "cpsUrn": "urn:bbc:content:assetUri:pidgin/tori-48591363",
                },
                "media": Object {
                  "advertising": true,
                  "caption": "“If di spoon attract me, most times na to carry am enta studio” – Collins",
                  "embedding": true,
                  "format": "video",
                  "id": "p07csxg6",
                  "imageUrl": "ichef.bbci.co.uk/images/ic/$recipe/p07csxwm.jpg",
                  "subType": "clip",
                  "synopses": Object {
                    "long": "Almost every wia pesin turn you go see art of different kinds but dis one get as e be, unto say na spoon dis pesin take dey do im own work.

Abiniro Collins na Artist for Lagos, south west Nigeria, wey no dey use eye see spoon.

Collins tok say na wen im dey school di idea come, as im bin dey find sometin wey pipo neva too use do art work 

Collins say im dream na to create place wey young artists for Nigeria go fit go to get mentor for dia work.

Producers: Usifo Omozokpea & Sarah Tiamiyu",
                    "medium": "Dis artist no dey take eye see spoon, as no be to chop food be di only tin him dey use am do.",
                    "short": "“If di spoon attract me, most times na to carry am enta studio” – Collins",
                  },
                  "title": "“If di spoon attract me, most times na to carry am enta studio” – Collins",
                  "versions": Array [
                    Object {
                      "availableFrom": 1560232614,
                      "availableTerritories": Object {
                        "nonUk": true,
                        "uk": true,
                      },
                      "duration": 111,
                      "durationISO8601": "PT1M51S",
                      "types": Array [
                        "Original",
                      ],
                      "versionId": "p07csxg8",
                      "warnings": Object {},
                    },
                  ],
                },
                "options": Object {
                  "isBreakingNews": false,
                  "isFactCheck": false,
                },
                "summary": "Dis artist no dey take eye see spoon, as no be to chop food be di only tin him dey use am do.",
                "timestamp": 1560233406,
                "type": "cps",
              },
              Object {
                "cpsType": "MAP",
                "headlines": Object {
                  "headline": "I realise my World Cup dream afta 14 years",
                },
                "id": "urn:bbc:ares::asset:pidgin/media-48519295",
                "indexImage": Object {
                  "altText": "Janine van Wyk",
                  "copyrightHolder": "BBC",
                  "height": 549,
                  "href": "http://c.files.bbci.co.uk/C34D/production/_107279994_p07cfs3f.jpg",
                  "id": "107279994",
                  "path": "/cpsprodpb/C34D/production/_107279994_p07cfs3f.jpg",
                  "subType": "index",
                  "width": 976,
                },
                "locators": Object {
                  "assetUri": "/pidgin/media-48519295",
                  "cpsUrn": "urn:bbc:content:assetUri:pidgin/media-48519295",
                },
                "media": Object {
                  "advertising": false,
                  "caption": "Janine van Wyk go lead South Africa go di Women's World Cup for di first time.",
                  "embedding": true,
                  "format": "video",
                  "id": "p07cfpl4",
                  "imageCopyright": "BBC",
                  "imageUrl": "ichef.bbci.co.uk/images/ic/$recipe/p07cfs3f.jpg",
                  "subType": "clip",
                  "synopses": Object {
                    "long": "Janine van Wyk don play for South Africa Women's team for 14 years. 

But dis summer, for di first di captain go lead di Banyana Banyana go France 2019 World Cup. 

She discuss her dreams, determination and development wit BBC Sport Africa inside dis BBC Africa one minute tori.

Dis na behind dis scenes wit South Africa captain wey dey lead di Bayana Bayana to go husle for di Women’s World Cup for di first time ever!",
                    "medium": "Dis na behind dis scenes wit South Africa captain wey dey lead di Bayana Bayana to go husle for di Women’s World Cup for difirst time ever!",
                    "short": "France 2019 Women's World Cup: Janine van Wyk go lead South Africa compete for first time",
                  },
                  "title": "I dey realise my World Cup Dream afta 14 years",
                  "versions": Array [
                    Object {
                      "availableFrom": 1559844782,
                      "availableTerritories": Object {
                        "nonUk": true,
                        "uk": true,
                      },
                      "duration": 100,
                      "durationISO8601": "PT1M40S",
                      "types": Array [
                        "Original",
                      ],
                      "versionId": "p07cfpl6",
                      "warnings": Object {},
                    },
                  ],
                },
                "options": Object {
                  "isBreakingNews": false,
                  "isFactCheck": false,
                },
                "passport": Object {
                  "campaigns": Array [
                    Object {
                      "campaignId": "5a988e3739461b000e9dabfa",
                      "campaignName": "WS - Give me perspective",
                    },
                  ],
                  "category": Object {
                    "categoryId": "http://www.bbc.co.uk/ontologies/applicationlogic-news/News",
                    "categoryName": "News",
                  },
                },
                "summary": "South Africa captain Janine van Wyk dey lead di Bayana Bayana to go hustle for di Women’s World Cup for di first time ever!",
                "timestamp": 1559845333,
                "type": "cps",
              },
              Object {
                "cpsType": "MAP",
                "headlines": Object {
                  "headline": "Henna Design di natural tattoo",
                },
                "id": "urn:bbc:ares::asset:pidgin/media-48516777",
                "indexImage": Object {
                  "altText": "Keyframe #1",
                  "copyrightHolder": "BBC",
                  "height": 576,
                  "href": "http://c.files.bbci.co.uk/14F84/production/_107229858_p07c6v9f.jpg",
                  "id": "107229858",
                  "path": "/cpsprodpb/14F84/production/_107229858_p07c6v9f.jpg",
                  "subType": "index",
                  "width": 1024,
                },
                "locators": Object {
                  "assetUri": "/pidgin/media-48516777",
                  "cpsUrn": "urn:bbc:content:assetUri:pidgin/media-48516777",
                },
                "media": Object {
                  "advertising": false,
                  "caption": "Henna Design di natural tattoo",
                  "embedding": true,
                  "format": "video",
                  "id": "p07c6tx3",
                  "imageCopyright": "BBC",
                  "imageUrl": "ichef.bbci.co.uk/images/ic/$recipe/p07c6v9f.jpg",
                  "subType": "clip",
                  "synopses": Object {
                    "long": "Henna, di natural tattoo wey dey important to religion and to fashion don dey exist for many centuries.
Many, many years back for dis part of Africa, pipo believe say na only Muslims fit do henna designs for dia bodi.
Back in dos days women dey do di design especially during Eid celebrations, wedding and naming ceremonies plus oda special occasions. E still be di same reach today.
Islam religion also believe say na only women suppose do henna tattoo for dia bodi as dis go separate dem from di men.
But all dat one don change as henna tattoo don turn fashion and more pipo wey no be Muslims, plus including men sef dey use am make dem sef beautiful.
For most of dis pipo dem prefer to do henna design dan to do oyibo kain tattoo wey dey permanent and no dey eva commot.

Production by Onyinye Chime and Abdulmalik Fahd Abdulmalik, Camera man Gift Ufuoma.",
                    "medium": "Weda na for religion or fashion, henna design na natural way to tattoo bodi witout any wahala.",
                    "short": "Henna Design di natural tattoo",
                  },
                  "title": "Henna Design di natural tattoo",
                  "versions": Array [
                    Object {
                      "availableFrom": 1559659746,
                      "availableTerritories": Object {
                        "nonUk": true,
                        "uk": true,
                      },
                      "duration": 146,
                      "durationISO8601": "PT2M26S",
                      "types": Array [
                        "Original",
                      ],
                      "versionId": "p07c6txg",
                      "warnings": Object {},
                    },
                  ],
                },
                "options": Object {
                  "isBreakingNews": false,
                  "isFactCheck": false,
                },
                "passport": Object {
                  "campaigns": Array [
                    Object {
                      "campaignId": "5a988e3739461b000e9dabfa",
                      "campaignName": "WS - Give me perspective",
                    },
                  ],
                  "category": Object {
                    "categoryId": "http://www.bbc.co.uk/ontologies/applicationlogic-news/Explainer",
                    "categoryName": "Explainer",
                  },
                },
                "summary": "Weda na for religion or fashion, henna design na natural way to tattoo bodi witout any wahala.",
                "timestamp": 1559661793,
                "type": "cps",
              },
              Object {
                "cpsType": "MAP",
                "headlines": Object {
                  "headline": "Di codeine investigation wey change Nigeria",
                },
                "id": "urn:bbc:ares::asset:pidgin/tori-48567846",
                "indexImage": Object {
                  "altText": "Keyframe #2",
                  "copyrightHolder": "BBC",
                  "height": 549,
                  "href": "http://c.files.bbci.co.uk/A3CB/production/_101113914_p065w1bn.jpg",
                  "id": "101113914",
                  "path": "/cpsprodpb/A3CB/production/_101113914_p065w1bn.jpg",
                  "subType": "index",
                  "width": 976,
                },
                "locators": Object {
                  "assetUri": "/pidgin/tori-48567846",
                  "cpsUrn": "urn:bbc:content:assetUri:pidgin/tori-48567846",
                },
                "media": Object {
                  "advertising": true,
                  "caption": "Africa Eye: How one codeine investigation change Nigeria",
                  "embedding": true,
                  "format": "video",
                  "id": "p07cmp1m",
                  "imageCopyright": "BBC",
                  "imageUrl": "ichef.bbci.co.uk/images/ic/$recipe/p07cms03.jpg",
                  "subType": "clip",
                  "synopses": Object {
                    "long": "BBC Africa Eye tear rubber for April 2018 with Sweet Sweet Codeine, one feem wey Nigerian investigative journalist Ruona Meyer present.

E show di abuse of di cough syrup medicine with codeine wey pipo suppose take afta prescription. Codeine cough syrup bin dey make pipo dey addicted -  millions of young pipo wey dey expose to am na im sabi pipo bin say dey addicted to di syrup.

BBC Africa Eye tori pesin Zuhura Yunus continue di tori of how di codeine story shine light ontop how dem bin dey sell am for black market.",
                    "medium": "Africa Eye chook eye inside di abuse of codeine cough syrup wey turn many Nigerians to addict.",
                    "short": "Africa Eye: How one codeine investigation change Nigeria",
                  },
                  "title": "Di codeine investigation wey change Nigeria",
                  "versions": Array [
                    Object {
                      "availableFrom": 1560015439,
                      "availableTerritories": Object {
                        "nonUk": true,
                        "uk": true,
                      },
                      "duration": 445,
                      "durationISO8601": "PT7M25S",
                      "types": Array [
                        "Original",
                      ],
                      "versionId": "p07cmp1p",
                      "warnings": Object {},
                    },
                  ],
                },
                "options": Object {
                  "isBreakingNews": false,
                  "isFactCheck": false,
                },
                "passport": Object {
                  "campaigns": Array [
                    Object {
                      "campaignId": "5a988e2939461b000e9dabf8",
                      "campaignName": "WS - Educate me",
                    },
                    Object {
                      "campaignId": "5a988e3739461b000e9dabfa",
                      "campaignName": "WS - Give me perspective",
                    },
                    Object {
                      "campaignId": "5a988e3e39461b000e9dabfb",
                      "campaignName": "WS - Keep me on trend",
                    },
                    Object {
                      "campaignId": "5a988e4739461b000e9dabfc",
                      "campaignName": "WS - Update me",
                    },
                  ],
                  "category": Object {
                    "categoryId": "http://www.bbc.co.uk/ontologies/applicationlogic-news/News",
                    "categoryName": "News",
                  },
                },
                "summary": "Africa Eye chook eye inside di abuse of codeine cough syrup wey turn many Nigerians to addict.",
                "timestamp": 1560015971,
                "type": "cps",
              },
              Object {
                "cpsType": "MAP",
                "headlines": Object {
                  "headline": "\\"Dance big pass how pipo dey take see am\\"",
                },
                "id": "urn:bbc:ares::asset:pidgin/media-48519287",
                "indexImage": Object {
                  "altText": "Kaffy di Nigerian dancer",
                  "copyrightHolder": "Kelechi Amadi-Obi",
                  "height": 576,
                  "href": "http://c.files.bbci.co.uk/C885/production/_107233315_p07c70mp.jpg",
                  "id": "107233315",
                  "path": "/cpsprodpb/C885/production/_107233315_p07c70mp.jpg",
                  "subType": "index",
                  "width": 1024,
                },
                "locators": Object {
                  "assetUri": "/pidgin/media-48519287",
                  "cpsUrn": "urn:bbc:content:assetUri:pidgin/media-48519287",
                },
                "media": Object {
                  "advertising": true,
                  "caption": "Kaffy say if di goment know di importance of dance sef dem go put am for our curriculum",
                  "embedding": false,
                  "format": "video",
                  "id": "p07c700k",
                  "imageCopyright": "Kelechi Amadi-Obi",
                  "imageUrl": "ichef.bbci.co.uk/images/ic/$recipe/p07c70mp.jpg",
                  "subType": "clip",
                  "synopses": Object {
                    "long": "E don tey wey Kafayat Oluwatoyin aka Kaffy don dey dance sotey she don turn am to business.

Kaffy follow BBC pidgin tok ontop how she take choose dance even though na pesin wey dey fly and repair plane she bin wan become for life before. 

She tok how dance take help her many times for her life “as adult di period of my life wey I tackle depression based on tins wey dey happen for me for inside house, wit di use of dance and di work wey I dey do as dancer, e continue to dey help me to remind me say make you no let your problem to define you” – as she tok.

She feel say pipo suppose dey appreciate dance for Nigeria pass as e dey now and pipo suppose get place wia dem fit go to learn dance if dem wan take am as work just as doctors and lawyers dem too get, “dat na why we say make we create platform like ‘The dance workshop Africa’ wey go empower, train and deal wit di problems wey we dey deal wit as pipo wey dey creative industry” she tok.

Kaffy bin win Guinness world record for “Longest Dance Party\\" for 2006, she dey married and she get two children wey she say be di biggest achievement for her life.",
                    "medium": "Kaffy say if di goment know di importance of dance sef dem go put am for our curriculum.",
                    "short": "Kaffy say if di goment know di importance of dance sef dem go put am for our curriculum",
                  },
                  "title": "\\"Dance big pass how pipo dey take see am\\"",
                  "versions": Array [
                    Object {
                      "availableFrom": 1559663402,
                      "availableTerritories": Object {
                        "nonUk": true,
                        "uk": true,
                      },
                      "duration": 139,
                      "durationISO8601": "PT2M19S",
                      "types": Array [
                        "Original",
                      ],
                      "versionId": "p07c700r",
                      "warnings": Object {},
                    },
                  ],
                },
                "options": Object {
                  "isBreakingNews": false,
                  "isFactCheck": false,
                },
                "passport": Object {
                  "campaigns": Array [
                    Object {
                      "campaignId": "5a988e3739461b000e9dabfa",
                      "campaignName": "WS - Give me perspective",
                    },
                  ],
                  "category": Object {
                    "categoryId": "http://www.bbc.co.uk/ontologies/applicationlogic-news/Explainer",
                    "categoryName": "Explainer",
                  },
                },
                "summary": "Kaffy say if di goment know di importance of dance sef dem go put am for our curriculum.",
                "timestamp": 1559663813,
                "type": "cps",
              },
            ],
            "semanticGroupName": "Section 2",
            "strapline": Object {
              "name": "Ginger me",
            },
            "title": "Section 2",
            "type": "responsive-inspire",
          },
          Object {
            "items": Array [
              Object {
                "cpsType": "STY",
                "headlines": Object {
                  "headline": "Bandits for Nigeria north-west different from killer herdsmen - Police",
                },
                "id": "urn:bbc:ares::asset:pidgin/tori-48586697",
                "indexImage": Object {
                  "altText": "Herdsmen",
                  "copyrightHolder": "The Washington Post",
                  "height": 549,
                  "href": "http://c.files.bbci.co.uk/F386/production/_107324326_herdsmen.jpg",
                  "id": "107324326",
                  "path": "/cpsprodpb/F386/production/_107324326_herdsmen.jpg",
                  "subType": "index",
                  "width": 976,
                },
                "locators": Object {
                  "assetUri": "/pidgin/tori-48586697",
                  "cpsUrn": "urn:bbc:content:assetUri:pidgin/tori-48586697",
                },
                "options": Object {
                  "isBreakingNews": false,
                  "isFactCheck": false,
                },
                "passport": Object {
                  "campaigns": Array [
                    Object {
                      "campaignId": "5a988e4739461b000e9dabfc",
                      "campaignName": "WS - Update me",
                    },
                  ],
                  "category": Object {
                    "categoryId": "http://www.bbc.co.uk/ontologies/applicationlogic-news/News",
                    "categoryName": "News",
                  },
                },
                "summary": "On Monday, tori come out say bandits kill at least 25 pipo for Sokoto State, north-west Nigeria wia many attack don dey happun.",
                "timestamp": 1560182620,
                "type": "cps",
              },
              Object {
                "cpsType": "STY",
                "headlines": Object {
                  "headline": "Justin Bieber wan fight Tom Cruise",
                },
                "id": "urn:bbc:ares::asset:pidgin/world-48585358",
                "indexImage": Object {
                  "altText": "Justin Bieber and Tom Cruise",
                  "caption": "Na 31 years Tom Cruise use senior Justin Bieber wey dey 25 years",
                  "copyrightHolder": "Getty Images",
                  "height": 549,
                  "href": "http://c.files.bbci.co.uk/3018/production/_107321321_untitleddesign.jpg",
                  "id": "107321321",
                  "path": "/cpsprodpb/3018/production/_107321321_untitleddesign.jpg",
                  "subType": "index",
                  "width": 976,
                },
                "locators": Object {
                  "assetUri": "/pidgin/world-48585358",
                  "cpsUrn": "urn:bbc:content:assetUri:pidgin/world-48585358",
                },
                "options": Object {
                  "isBreakingNews": false,
                  "isFactCheck": false,
                },
                "passport": Object {
                  "campaigns": Array [
                    Object {
                      "campaignId": "5a988e3e39461b000e9dabfb",
                      "campaignName": "WS - Keep me on trend",
                    },
                  ],
                  "category": Object {
                    "categoryId": "http://www.bbc.co.uk/ontologies/applicationlogic-news/News",
                    "categoryName": "News",
                  },
                },
                "summary": "Di Canadian singer say if Tom Cruise no accept im challenge e go mean say im dey \\"fear am.\\"",
                "timestamp": 1560178605,
                "type": "cps",
              },
              Object {
                "cpsType": "STY",
                "headlines": Object {
                  "headline": "Jaguda pipo kill 100 pipo for one village for Mali",
                },
                "id": "urn:bbc:ares::asset:pidgin/tori-48585917",
                "indexImage": Object {
                  "altText": "Mali",
                  "copyrightHolder": "Getty Images",
                  "height": 549,
                  "href": "http://c.files.bbci.co.uk/15F38/production/_107321998__107320905_gettyimages-492754509.jpg",
                  "id": "107321998",
                  "path": "/cpsprodpb/15F38/production/_107321998__107320905_gettyimages-492754509.jpg",
                  "subType": "index",
                  "width": 976,
                },
                "locators": Object {
                  "assetUri": "/pidgin/tori-48585917",
                  "cpsUrn": "urn:bbc:content:assetUri:pidgin/tori-48585917",
                },
                "options": Object {
                  "isBreakingNews": false,
                  "isFactCheck": false,
                },
                "passport": Object {
                  "campaigns": Array [
                    Object {
                      "campaignId": "5a988e3739461b000e9dabfa",
                      "campaignName": "WS - Give me perspective",
                    },
                    Object {
                      "campaignId": "5a988e3e39461b000e9dabfb",
                      "campaignName": "WS - Keep me on trend",
                    },
                    Object {
                      "campaignId": "5a988e4739461b000e9dabfc",
                      "campaignName": "WS - Update me",
                    },
                  ],
                },
                "summary": "Di killing happun for one village for central Mali wia fight-fight between hunters and Fulani herders dey common.",
                "timestamp": 1560175188,
                "type": "cps",
              },
              Object {
                "cpsType": "STY",
                "headlines": Object {
                  "headline": "UK, Canada alert nationals over kidnapping den terror threats for Ghana",
                },
                "id": "urn:bbc:ares::asset:pidgin/tori-48578549",
                "indexImage": Object {
                  "altText": "Ghana flag",
                  "copyrightHolder": "Getty Images",
                  "height": 549,
                  "href": "http://c.files.bbci.co.uk/17148/production/_105063549_gettyimages-80391721-594x594.jpg",
                  "id": "105063549",
                  "path": "/cpsprodpb/17148/production/_105063549_gettyimages-80391721-594x594.jpg",
                  "subType": "index",
                  "width": 976,
                },
                "locators": Object {
                  "assetUri": "/pidgin/tori-48578549",
                  "cpsUrn": "urn:bbc:content:assetUri:pidgin/tori-48578549",
                },
                "options": Object {
                  "isBreakingNews": false,
                  "isFactCheck": false,
                },
                "passport": Object {
                  "campaigns": Array [
                    Object {
                      "campaignId": "5a988e4739461b000e9dabfc",
                      "campaignName": "WS - Update me",
                    },
                  ],
                  "category": Object {
                    "categoryId": "http://www.bbc.co.uk/ontologies/applicationlogic-news/News",
                    "categoryName": "News",
                  },
                },
                "summary": "Ghana no record any attacks, but UK government advice dema nationals sey make dem make vigilant, especially for de northern border areas.",
                "timestamp": 1560153974,
                "type": "cps",
              },
              Object {
                "cpsType": "STY",
                "headlines": Object {
                  "headline": "Buhari don accept Onnoghen retirement",
                },
                "id": "urn:bbc:ares::asset:pidgin/tori-48578547",
                "indexImage": Object {
                  "altText": "Justice Walter Onnoghen",
                  "copyrightHolder": "Getty Images",
                  "height": 549,
                  "href": "http://c.files.bbci.co.uk/4831/production/_106518481_gettyimages-1137872968.jpg",
                  "id": "106518481",
                  "path": "/cpsprodpb/4831/production/_106518481_gettyimages-1137872968.jpg",
                  "subType": "index",
                  "width": 976,
                },
                "locators": Object {
                  "assetUri": "/pidgin/tori-48578547",
                  "cpsUrn": "urn:bbc:content:assetUri:pidgin/tori-48578547",
                },
                "options": Object {
                  "isBreakingNews": false,
                  "isFactCheck": false,
                },
                "summary": "Di former Chief Justice of Nigeria Walter Onnoghen enter kasala ontop accuse say im no declare im complete asset wen im enta office.",
                "timestamp": 1560142192,
                "type": "cps",
              },
            ],
            "semanticGroupName": "Section 3",
            "strapline": Object {
              "name": "Informate me",
            },
            "title": "Section 3",
            "type": "responsive-in-depth",
          },
          Object {
            "items": Array [
              Object {
                "byline": Object {
                  "name": "Daniel Semeniworima",
                  "persons": Array [
                    Object {
                      "function": "BBC Pidgin, Lagos",
                      "name": "Daniel Semeniworima",
                      "thumbnail": "http://c.files.bbci.co.uk/81E3/production/_98115233_danielsppsoftcopyonly.jpg",
                    },
                  ],
                  "title": "BBC Pidgin, Lagos",
                },
                "cpsType": "STY",
                "headlines": Object {
                  "headline": "Buhari no give speech afta e take oath",
                },
                "id": "urn:bbc:ares::asset:pidgin/tori-48421890",
                "indexImage": Object {
                  "altText": "Buhari, Osinbajo take 'Next Level' oath",
                  "copyrightHolder": "Bashir Ahmad",
                  "height": 675,
                  "href": "http://c.files.bbci.co.uk/51E4/production/_107146902_d7ubgzgxyaeqyof.jpg",
                  "id": "107146902",
                  "path": "/cpsprodpb/51E4/production/_107146902_d7ubgzgxyaeqyof.jpg",
                  "subType": "index",
                  "width": 1200,
                },
                "locators": Object {
                  "assetUri": "/pidgin/tori-48421890",
                  "cpsUrn": "urn:bbc:content:assetUri:pidgin/tori-48421890",
                },
                "options": Object {
                  "isBreakingNews": false,
                  "isFactCheck": false,
                },
                "passport": Object {
                  "campaigns": Array [
                    Object {
                      "campaignId": "5a988e2939461b000e9dabf8",
                      "campaignName": "WS - Educate me",
                    },
                    Object {
                      "campaignId": "5a988e3e39461b000e9dabfb",
                      "campaignName": "WS - Keep me on trend",
                    },
                    Object {
                      "campaignId": "5a988e4739461b000e9dabfc",
                      "campaignName": "WS - Update me",
                    },
                  ],
                  "category": Object {
                    "categoryId": "http://www.bbc.co.uk/ontologies/applicationlogic-news/News",
                    "categoryName": "News",
                  },
                },
                "summary": "Dis go be di first time since 1999 wey any Nigerian leader no go give speech after im inauguration.",
                "timestamp": 1559133172,
                "type": "cps",
              },
              Object {
                "cpsType": "STY",
                "headlines": Object {
                  "headline": "PDP candidate Bala Muhammed dey lead wit 6376 votes for Bauchi state",
                },
                "id": "urn:bbc:ares::asset:pidgin/tori-47685579",
                "indexImage": Object {
                  "altText": "Bala Mohammed and Govnor Mohammed Abubakar",
                  "caption": "Bala Mohammed and Govnor Mohammed Abubakar",
                  "copyrightHolder": "BBC",
                  "height": 549,
                  "href": "http://c.files.bbci.co.uk/15B3F/production/_106159888_030edd7b-b5e5-4572-8570-5fbd4f9b96cd.jpg",
                  "id": "106159888",
                  "path": "/cpsprodpb/15B3F/production/_106159888_030edd7b-b5e5-4572-8570-5fbd4f9b96cd.jpg",
                  "subType": "index",
                  "width": 976,
                },
                "locators": Object {
                  "assetUri": "/pidgin/tori-47685579",
                  "cpsUrn": "urn:bbc:content:assetUri:pidgin/tori-47685579",
                },
                "options": Object {
                  "isBreakingNews": false,
                  "isFactCheck": false,
                },
                "passport": Object {
                  "campaigns": Array [
                    Object {
                      "campaignId": "5a988e4739461b000e9dabfc",
                      "campaignName": "WS - Update me",
                    },
                  ],
                  "category": Object {
                    "categoryId": "http://www.bbc.co.uk/ontologies/applicationlogic-news/News",
                    "categoryName": "News",
                  },
                },
                "summary": "Afta collation of results for Bauchi state, North East Nigeria, di ruling All Progressive Congress candidate dey back.",
                "timestamp": 1553429822,
                "type": "cps",
              },
              Object {
                "cpsType": "STY",
                "headlines": Object {
                  "headline": "INEC declare Ganduje winner of Kano govnorship election",
                },
                "id": "urn:bbc:ares::asset:pidgin/tori-47685581",
                "indexImage": Object {
                  "altText": "Governor Ganduje",
                  "copyrightHolder": "BBC",
                  "height": 549,
                  "href": "http://c.files.bbci.co.uk/9F8B/production/_106134804_ganduje1.jpg",
                  "id": "106134804",
                  "path": "/cpsprodpb/9F8B/production/_106134804_ganduje1.jpg",
                  "subType": "index",
                  "width": 976,
                },
                "locators": Object {
                  "assetUri": "/pidgin/tori-47685581",
                  "cpsUrn": "urn:bbc:content:assetUri:pidgin/tori-47685581",
                },
                "options": Object {
                  "isBreakingNews": false,
                  "isFactCheck": false,
                },
                "passport": Object {
                  "campaigns": Array [
                    Object {
                      "campaignId": "5a988e4739461b000e9dabfc",
                      "campaignName": "WS - Update me",
                    },
                  ],
                  "category": Object {
                    "categoryId": "http://www.bbc.co.uk/ontologies/applicationlogic-news/News",
                    "categoryName": "News",
                  },
                },
                "summary": "Small drama bin happun for di collation centre before dem announce di winner as some party agents and observers condemn di election process say wuru-wuru full inside.",
                "timestamp": 1553457178,
                "type": "cps",
              },
              Object {
                "cpsType": "STY",
                "headlines": Object {
                  "headline": "PDP dey ask INEC to cancel Kano rerun",
                },
                "id": "urn:bbc:ares::asset:pidgin/tori-47674110",
                "indexImage": Object {
                  "altText": "PDP chairmo for Kano Rabiu Bichi (na im dey middle dey tok to tori pipo)",
                  "caption": "PDP chairmo for Kano Rabiu Bichi (na im dey middle dey tok to tori pipo)",
                  "copyrightHolder": "BBC",
                  "height": 576,
                  "href": "http://c.files.bbci.co.uk/5496/production/_106145612_pdp.jpg",
                  "id": "106145612",
                  "path": "/cpsprodpb/5496/production/_106145612_pdp.jpg",
                  "subType": "index",
                  "width": 1024,
                },
                "locators": Object {
                  "assetUri": "/pidgin/tori-47674110",
                  "cpsUrn": "urn:bbc:content:assetUri:pidgin/tori-47674110",
                },
                "options": Object {
                  "isBreakingNews": false,
                  "isFactCheck": false,
                },
                "passport": Object {
                  "campaigns": Array [
                    Object {
                      "campaignId": "5a988e3739461b000e9dabfa",
                      "campaignName": "WS - Give me perspective",
                    },
                    Object {
                      "campaignId": "5a988e3e39461b000e9dabfb",
                      "campaignName": "WS - Keep me on trend",
                    },
                    Object {
                      "campaignId": "5a988e4739461b000e9dabfc",
                      "campaignName": "WS - Update me",
                    },
                  ],
                  "category": Object {
                    "categoryId": "http://www.bbc.co.uk/ontologies/applicationlogic-news/News",
                    "categoryName": "News",
                  },
                },
                "summary": "PDP chairmo for Kano Engr Rabiu Bichi tok say e dey necessary for INEC to cancel Saturday rerun.",
                "timestamp": 1553343408,
                "type": "cps",
              },
              Object {
                "cpsType": "STY",
                "headlines": Object {
                  "headline": "'I ready to jam APC for appeal court'",
                },
                "id": "urn:bbc:ares::asset:pidgin/tori-47654477",
                "imageThumbnail": Object {
                  "altText": "Ademola Adeleke",
                  "copyrightHolder": "PDP",
                  "height": 180,
                  "href": "http://c.files.bbci.co.uk/9ECE/production/_106145604_d2r-rakw0au3mdy.jpg",
                  "id": "106145604",
                  "path": "/cpsprodpb/9ECE/production/_106145604_d2r-rakw0au3mdy.jpg",
                  "subType": "index-thumbnail",
                  "width": 320,
                },
                "indexImage": Object {
                  "altText": "Ademola Adeleke",
                  "copyrightHolder": "PDP",
                  "height": 549,
                  "href": "http://c.files.bbci.co.uk/5C3E/production/_106141632_d2r-rakw0au3mdy.jpg",
                  "id": "106141632",
                  "path": "/cpsprodpb/5C3E/production/_106141632_d2r-rakw0au3mdy.jpg",
                  "subType": "index",
                  "width": 976,
                },
                "locators": Object {
                  "assetUri": "/pidgin/tori-47654477",
                  "cpsUrn": "urn:bbc:content:assetUri:pidgin/tori-47654477",
                },
                "options": Object {
                  "isBreakingNews": false,
                  "isFactCheck": false,
                },
                "passport": Object {
                  "campaigns": Array [
                    Object {
                      "campaignId": "5a988e4739461b000e9dabfc",
                      "campaignName": "WS - Update me",
                    },
                  ],
                  "category": Object {
                    "categoryId": "http://www.bbc.co.uk/ontologies/applicationlogic-news/News",
                    "categoryName": "News",
                  },
                },
                "summary": "Osun Govnorship Election Tribunal on Friday declare PDP candidate Senator Ademola Adeleke winner.",
                "timestamp": 1553283825,
                "type": "cps",
              },
              Object {
                "cpsType": "STY",
                "headlines": Object {
                  "headline": "Kano elections get k-leg, reports of katakata everywia",
                },
                "id": "urn:bbc:ares::asset:pidgin/tori-47655879",
                "indexImage": Object {
                  "altText": "Kano",
                  "copyrightHolder": "BBC",
                  "height": 549,
                  "href": "http://c.files.bbci.co.uk/12B8C/production/_106148667_whatsappimage2019-03-23at9.53.03am.jpg",
                  "id": "106148667",
                  "path": "/cpsprodpb/12B8C/production/_106148667_whatsappimage2019-03-23at9.53.03am.jpg",
                  "subType": "index",
                  "width": 976,
                },
                "locators": Object {
                  "assetUri": "/pidgin/tori-47655879",
                  "cpsUrn": "urn:bbc:content:assetUri:pidgin/tori-47655879",
                },
                "options": Object {
                  "isBreakingNews": false,
                  "isFactCheck": false,
                },
                "passport": Object {
                  "campaigns": Array [
                    Object {
                      "campaignId": "5a988e4739461b000e9dabfc",
                      "campaignName": "WS - Update me",
                    },
                  ],
                  "category": Object {
                    "categoryId": "http://www.bbc.co.uk/ontologies/applicationlogic-news/News",
                    "categoryName": "News",
                  },
                },
                "summary": "Areas for Kano State wey INEC don plan supplementary elections for never begin, and e no look like say e go happun at all because of kasala.",
                "timestamp": 1553334999,
                "type": "cps",
              },
            ],
            "semanticGroupName": "Special reports 2",
            "strapline": Object {
              "name": "Special reports 2",
            },
            "title": "Special reports 2",
            "type": "special-reports",
          },
          Object {
            "items": Array [
              Object {
                "assetTypeCode": "PRO",
                "contentType": "Text",
                "indexImage": Object {
                  "altText": "Messi, Iwobi, Ronaldo",
                  "copyrightHolder": "Getty Images",
                  "height": 549,
                  "href": "http://c.files.bbci.co.uk/F617/production/_101999926_messiiwobironaldo.jpg",
                  "id": "101999926",
                  "path": "/cpsprodpb/F617/production/_101999926_messiiwobironaldo.jpg",
                  "subType": "index",
                  "width": 976,
                },
                "name": "Take dis predictor choose who go reach World Cup final",
                "timestamp": 1528968308,
                "type": "link",
                "uri": "https://www.bbc.com/pidgin/sport-44416820",
              },
              Object {
                "assetTypeCode": "PRO",
                "contentType": "Text",
                "indexImage": Object {
                  "altText": "Rashidi",
                  "caption": "Rashidi Yekini na im score Nigeria first goal for World Cup",
                  "copyrightHolder": "David Cannon",
                  "height": 549,
                  "href": "http://c.files.bbci.co.uk/1820B/production/_101972889_gettyimages-227910.jpg",
                  "id": "101972889",
                  "path": "/cpsprodpb/1820B/production/_101972889_gettyimages-227910.jpg",
                  "subType": "index",
                  "width": 976,
                },
                "name": "World Cup 2018 Quiz: You fit name all di players wey don score Super Eagles goal for World Cup?",
                "timestamp": 1528975336,
                "type": "link",
                "uri": "https://www.bbc.com/pidgin/sport-44439411",
              },
              Object {
                "assetTypeCode": "PRO",
                "contentType": "Text",
                "indexImage": Object {
                  "altText": "all-time African XI promo image",
                  "copyrightHolder": "BBC",
                  "height": 549,
                  "href": "http://c.files.bbci.co.uk/CEBD/production/_101952925_wcbanner-2.png",
                  "id": "101952925",
                  "path": "/cpsprodpb/CEBD/production/_101952925_wcbanner-2.png",
                  "subType": "index",
                  "width": 976,
                },
                "name": "Select your best ever African 11 players for World Cup",
                "timestamp": 1528978069,
                "type": "link",
                "uri": "https://www.bbc.com/pidgin/sport-44425543",
              },
              Object {
                "assetTypeCode": "PRO",
                "contentType": "Text",
                "indexImage": Object {
                  "altText": "Sane",
                  "copyrightHolder": "Getty Images",
                  "height": 549,
                  "href": "http://c.files.bbci.co.uk/0775/production/_101890910_gettyimages-964924372.jpg",
                  "id": "101890910",
                  "path": "/cpsprodpb/0775/production/_101890910_gettyimages-964924372.jpg",
                  "subType": "index",
                  "width": 976,
                },
                "name": "World Cup 2018: Di top stars wey no dey go World Cup",
                "timestamp": 1528978791,
                "type": "link",
                "uri": "https://www.bbc.com/pidgin/sport-44214129",
              },
            ],
            "semanticGroupName": "Frequency info",
            "strapline": Object {
              "name": "2018 World Cup",
            },
            "title": "Frequency info",
            "type": "featured-site-top-stories",
          },
        ],
      },
      "metadata": Object {
        "analyticsLabels": Object {
          "counterName": "pidgin.page",
          "cps_asset_id": "40423314",
          "cps_asset_type": "idx",
        },
        "blockTypes": Array [
          "responsive-top-stories",
          "responsive-cluster",
          "responsive-must-see",
          "responsive-inspire",
          "responsive-in-depth",
          "special-reports",
          "featured-site-top-stories",
        ],
        "createdBy": "pidgin-v6",
        "firstPublished": 1499440608,
        "id": "urn:bbc:ares::index:pidgin/front_page/desktop/domestic",
        "language": "pcm",
        "lastPublished": 1560249011,
        "lastUpdated": 1560249022470,
        "locators": Object {
          "assetUri": "/pidgin/front_page",
          "cpsUrn": "urn:bbc:content:assetUri:pidgin/front_page",
          "curie": "http://www.bbc.co.uk/asset/52f3c7b1-83ed-2338-e050-17ac8045cd94/desktop/domestic",
        },
        "options": Object {
          "allowAdvertising": true,
        },
        "summary": "We dey give una latest tori on top politics, environment, business, sports, entertainment, health, fashion and all di oda things wey dey happen for West and Central Africa come add di rest of di world join. For better informate plus explanation of all di ogbonge tori wey pipo never hear about for inside West and Central Africa, BBC Pidgin dey serve am with video, audio, maps and oda graphics join.",
        "tags": Object {},
        "title": "Domot",
        "type": "IDX",
        "version": "v1.0.10",
      },
      "promo": Object {
        "id": "urn:bbc:ares::index:pidgin/front_page/desktop/domestic",
        "name": "Domot",
        "subType": "IDX",
        "type": "simple",
        "uri": "/pidgin/front_page",
      },
      "relatedContent": Object {
        "groups": Array [],
        "section": Object {
          "name": "Domot",
          "subType": "index",
          "type": "simple",
          "uri": "/pidgin/front_page",
        },
        "site": Object {
          "name": "BBC Pidgin",
          "subType": "site",
          "type": "simple",
          "uri": "/pidgin",
        },
      },
    }
  }
  service="default"
/>
`;
